[package]
name = "tagen"
description = "Generates lots of tags by version and variants."
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/siketyan/tagen"
repository = "https://github.com/siketyan/tagen.git"
readme = "README.md"
edition = "2021"
authors = [
    # Thank you for your contribution!
    # While contributing to this project, feel free to add your name here :)
    "Naoki Ikeguchi <me@s6n.jp>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"], optional = true }
thiserror = "1.0"

[features]
cli = ["clap"]
default = []

[[bin]]
name = "tagen"
required-features = ["cli"]
